<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#59000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:text="@string/choose_action"
        android:textColor="@color/orange"
        android:textSize="42dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/path_settings"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:text="@string/settings"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        app:strokeWidth="2dp"
        app:strokeColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <Button
        android:id="@+id/path_manage"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:text="@string/manage"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/path_share"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:text="@string/share"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/path_register"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:text="@string/register_path"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/path_about"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:shadowColor="#5C000000"
        android:shadowDy="2"
        android:shadowRadius="24"
        android:text="@string/about"
        android:textColor="@color/orange"
        android:textSize="22sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="837dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="230dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="760dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="129dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="206dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="410dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="309dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="376dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="190dp" />

</androidx.constraintlayout.widget.ConstraintLayout>